# otm

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  LICENSE  Otm.sln  README.md  docker-compose.dcproj  docker-compose.override.yml  docker-compose.yml  influxdb_docker.sh  otm.code-workspace  otm.sln  otm_docker.sh
.devcontainer/: devcontainer.json  postCreate.sh
Client/: Otm.Client.csproj  Program.cs  README.md  _Imports.razor  package.json
Client.Api/: Clients.cs  Otm.Client.Api.csproj
Otm/: Otm.csproj  OtmContext.cs  OtmContextManager.cs  Program.cs  Startup.cs  appsettings.Development.json  nlog.config
Otm.StressTest/: BaseTcpServer.cs  Dockerfile  PlcServer.cs  Program.cs
Otm.Tests/: OtmServiceTests.cs  Tests.csproj
PtlEmulator/: Cargo.toml
PtlEmulator/resources/: client_row.ui  display_item.ui  resources.gresource.xml  window.ui
PtlEmulator/src/: main.rs
PtlEmulator/src/client_object/: imp.rs  mod.rs
PtlEmulator/src/client_row/: imp.rs  mod.rs
PtlEmulator/src/display_item/: imp.rs  mod.rs
PtlEmulator/src/display_object/: imp.rs  mod.rs
PtlEmulator/src/ptl_server/: imp.rs  mod.rs
PtlEmulator/src/window/: imp.rs  mod.rs
Server/: DataPointService.cs  Dockerfile  LogMessage.cs  NeodentPLC.json  Otm.Server.csproj  OtmContext.cs  OtmContextManager.cs  Program.cs  Server.sln  Startup.cs  appsettings.Development.json  appsettings.json  nlog.config  package-lock.json  web.config
Shared/: LogMessage.cs  Otm.Shared.csproj  WeatherForecast.cs
Tests/: Otm.Tests.csproj  UnitTest1.cs  package-lock.json  xunit.runner.json
src/: OtmService.cs  (+4 more)
(+376 files in other folders)
