[package]
name = "ptl_emulator"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = { version = "0.3" }
futures-util = { version = "0.3" }
gtk = { version = "0.6.4", package = "gtk4", features = ["v4_6"] }
once_cell = "1.0"

[build-dependencies]
glib-build-tools = "0.17"
